--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,12 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# Mac OS files
+*/.DS_Store
+.DS_Store
+
+# xCode files
+*.xcodeproj/*.pbxproj
+*.xcworkspace/*.xcworkspacedata
+*.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
